# neural-network-study

./: CMakeLists.txt
include/: multlayerperceptron.h  perceptron.h
src/: CMakeLists.txt  main.cpp  multlayerperceptron.cpp  perceptron.cpp
